force-app/main/default/objects/Sample_Request_Fulfillment__c/Sample_Request_Fulfillment__c.object-meta.xml
<CustomObject>
    <label>Sample Fulfillment</label>
    <nameField>
        <displayFormat>SRF-{000000}</displayFormat>
        <label>Sample Fulfillment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Fulfillments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>