force-app/main/default/objects/Sample_Request_Fulfillment__c/fields/COA_required_CIC_Requests_Only__c.field-meta.xml
<CustomField>
    <fullName>COA_required_CIC_Requests_Only__c</fullName>
    <formula>TEXT(Sample_Request__r.COA_required__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COA required (CIC Requests Only)</label>
    <type>Text</type>
</CustomField>