force-app/main/default/objects/Sample_Request_Fulfillment__c/fields/Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email__c</fullName>
    <label>Confirmation Email</label>
    <type>Email</type>
</CustomField>