force-app/main/default/objects/Sample_Request_Fulfillment__c/fields/Is_Product_being_pulled_from_distributio__c.field-meta.xml
<CustomField>
    <fullName>Is_Product_being_pulled_from_distributio__c</fullName>
    <label>Is Product being pulled from Distributor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>