force-app/main/default/objects/Sample_Request_Fulfillment__c/fields/IsFulfilled__c.field-meta.xml
<CustomField>
    <fullName>IsFulfilled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFulfilled</label>
    <type>Checkbox</type>
</CustomField>