force-app/main/default/objects/Sample_Request_Fulfillment__c/fields/Plant_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Plant_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Sample Request Fulfillments</relationshipLabel>
    <relationshipName>Sample_Request_Fulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>