force-app/main/default/objects/Sample_Request_Fulfillment__c/fields/Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Production_Date__c</fullName>
    <label>Pack Date (CIC Requests Only)</label>
    <type>Date</type>
</CustomField>