force-app/main/default/objects/Sample_Request_Fulfillment__c/fields/Requested_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Delivery_Date__c</fullName>
    <formula>Sample_Request__r.Requested_Delivery_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>