force-app/main/default/objects/Sample_Request_Fulfillment__c/fields/Sample_Request__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request__c</fullName>
    <label>Sample Request</label>
    <referenceTo>SampleRequest__c</referenceTo>
    <relationshipLabel>Sample Request Fulfillments</relationshipLabel>
    <relationshipName>Sample_Request_Fulfillments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>