force-app/main/default/objects/Sample_Request_Fulfillment__c/fields/Sample_Request_Fulfilled_On__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request_Fulfilled_On__c</fullName>
    <label>Sample Request Fulfilled On</label>
    <type>DateTime</type>
</CustomField>