force-app/main/default/objects/Sample_Request_Fulfillment__c/fields/Sample_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Ship_Date__c</fullName>
    <label>Sample Ship Date</label>
    <type>Date</type>
</CustomField>