force-app/main/default/objects/Sample_Request_Fulfillment__c/fields/Sample_Status_Denied_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sample_Status_Denied_Reason__c</fullName>
    <label>Sample Status Denied Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sample out of stock</fullName>
            </value>
            <value>
                <fullName>Sample above business thresholds</fullName>
            </value>
            <value>
                <fullName>Sample Product Code has been discontinued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>