force-app/main/default/objects/Sample_Request_Fulfillment__c/fields/Shipping_Notes__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Notes__c</fullName>
    <label>Shipping Notes</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>