force-app/main/default/objects/Sample_Request_Fulfillment__c/fields/Total_Freight_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Freight_Cost__c</fullName>
    <label>Total Freight Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>