force-app/main/default/objects/Sample_Request_Fulfillment__c/recordTypes/Protein_Sample_Request_Fulfillment.recordType-meta.xml
<RecordType>
    <fullName>Protein_Sample_Request_Fulfillment</fullName>
    <active>true</active>
    <description>Record Type for all Protein requests (Cargill Beef, Case Ready, CVAP-Beef(Burgers), CVAP Poultry(Eggs), Turkey &amp; Cooked Meats)</description>
    <label>Protein Sample Request Fulfillment</label>
</RecordType>