force-app/main/default/objects/Sample_Request_Fulfillment__c/validationRules/CFNA_Require_Reason_When_Not_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>CFNA_Require_Reason_When_Not_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &#39;Not Approved&#39;) &amp;&amp; ISPICKVAL(Sample_Status_Denied_Reason__c, &#39;&#39;)</errorConditionFormula>
    <errorMessage>Sample Status Denied Reason is required when Not Approved</errorMessage>
</ValidationRule>