force-app/main/default/objects/Sample_Request_Fulfillment__c/validationRules/CFNA_Require_Ship_Date_When_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>CFNA_Require_Ship_Date_When_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &#39;Complete&#39;) &amp;&amp; ISBLANK(Sample_Ship_Date__c)</errorConditionFormula>
    <errorMessage>Sample Ship Date is required when Complete</errorMessage>
</ValidationRule>