force-app/main/default/objects/Sample_Request_Fulfillment__c/validationRules/CFNA_Require_Tracking_When_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>CFNA_Require_Tracking_When_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &#39;Complete&#39;)
&amp;&amp; 
ISBLANK(Tracking__c)
&amp;&amp;
NOT(ISPICKVAL(Shipping_Company__c, &#39;Metro&#39;))
&amp;&amp;
NOT(ISPICKVAL(Shipping_Company__c, &#39;Pick Up&#39;))</errorConditionFormula>
    <errorMessage>Tracking # is required when Status is Complete and Shipping Company is not &#39;Metro&#39; or &#39;Pick Up&#39;.</errorMessage>
</ValidationRule>