force-app/main/default/objects/Sample_Request_Fulfillment__c/validationRules/CVAP_Shipping_Comp_Reqd_with_Tracking_No.validationRule-meta.xml
<ValidationRule>
    <fullName>CVAP_Shipping_Comp_Reqd_with_Tracking_No</fullName>
    <active>true</active>
    <description>CVAP Shipping Company is required when Tracking # entered</description>
    <errorConditionFormula>ISBLANK(TEXT(Shipping_Company__c)) 
&amp;&amp;
NOT(ISBLANK(Tracking__c))</errorConditionFormula>
    <errorMessage>Shipping Company is required when Tracking # entered</errorMessage>
</ValidationRule>