force-app/main/default/objects/Sample_Request_Fulfillment__c/validationRules/Status_must_be_complete_with_tracking_no.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_must_be_complete_with_tracking_no</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Tracking__c))
&amp;&amp;
NOT(ISPICKVAL(Status__c, &#39;Complete&#39;))</errorConditionFormula>
    <errorMessage>Status must be &#39;Complete&#39; when Tracking # is entered.</errorMessage>
</ValidationRule>